# raw_report_fetch

./: .env.example  .gitignore  LICENCE  README.md  consolidated_security_report.csv  ctbc-raw-report-fetch.spec  error_handler.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
config/: .env.example
iq_fetcher/: __init__.py  client.py  config.py  fetcher.py  utils.py
src/iq_fetcher/: __init__.py  __main__.py  client.py  config.py  fetcher.py  utils.py
